--- a/style.css
+++ b/style.css
@@ -1,182 +1,201 @@
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 *,
 *::before,
 *::after {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-
-body {
-    margin: 0;
-}
-
-:root {
-    --pink-orange-gradient: linear-gradient(to top, #F23695, #FD6556);
-    --text-muted-color: #8E90A3;
-    --footer-bg-color: #12183F;
-    --blue-pink-gradient: linear-gradient(to top, #DD2DAF, #9B3ED3);
-    --main-btn-color: #F23695;
-}
-
 html {
-    font-size: 62.5%;
-    font-family: 'Plus Jakarta Sans', sans-serif;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-size: 62.5%;
 }
-
-.wrapper {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.container {
-    width: 1200px;
-    border: solid 1px green;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .main-container {
-    display: flex;
-    justify-content: content;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    border: solid 1px red;
+  max-width: 100rem;
+  margin: 0 auto;
+  padding: 2rem 2rem;
 }
-
-nav {
-    padding: 1.6rem 0rem;
+.center {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
-.logo {
-    font-size: 3.4rem;
-    flex-grow: 1;
+header {
+  height: 4rem;
 }
-
-main.wrapper {
-    flex-direction: column;
-    align-items: center;
+.logo__text {
+  font-weight: 900;
+  font-size: 3.4rem;
 }
-
-.hero.container {}
-
 .btn {
-    display: flex;
-    flex-wrap: wrap;
-    color: white;
-    height: 60px;
-    width: 200px;
-    font-size: 1.8rem;
-    background-color: #12183F;
-    align-items: center;
-    justify-content: center;
-    border-radius: 100px;
-    text-decoration: none;
-    font-weight: 600;
+  font-size: 1.6rem;
+  color: white;
+  font-weight: 700;
+  width: max-content;
+  padding: 1.6rem 3rem;
+  outline: none;
+  border: none;
+  text-decoration: none;
+  border-radius: 3.6rem;
+  cursor: pointer;
+}
+.btn--nav {
+  background-color: #13183f
 }
 
-.btn--banner {
-    background: var(--pink-orange-gradient);
-}
+.btn:hover, .btn--link:hover {
+  opacity: .8;
+} 
 
+.btn--cta {
+  background: linear-gradient(rgb(240, 42, 165),rgb(253, 104, 81));
+  background-color: red;
+}
+.btn--link {
+  background-color: transparent;
+  color: #f74780;
+  width: max-content;
+  font-size: 1.6rem;
+  padding: 1rem 1rem 1rem 0rem;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+}
 .btn--footer {
-    background: var(--blue-pink-gradient);
+  background: linear-gradient(rgb(240, 42, 165),#8643DE);
 }
 
-.hero {}
-
-.hero h1 {
-    font-size: 5.6rem;
+nav ul {
+  text-decoration: none;
+  list-style: none;
+}
+.hero {
+  display: flex;
+  flex-direction: column;
+}
+.hero__left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.hero p {
-    font-size: 1.8rem;
-    color: var(--text-muted-color);
+.hero__right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 11rem;
 }
-
-.hero-left {
-    display: flex;
-    flex-direction: column;
+.hero__right > img {
+  object-fit: cover;
+  width: 100%;
 }
-
-.hero-left h1,
-.hero-left p {
-    padding-bottom: 3rem;
+.hero__cta {
+  font-size: 4rem;
+  font-weight: 800;
+  line-height: 5rem;
+  text-align: center;
+  padding-top: 6rem;
+  padding-bottom: 2rem;
 }
-
-.hero-right>img {
-    max-width: 500px;
+.hero__sub-header {
+  color: #83869a;
+  line-height: 2.5rem;
+  text-align: center;
+  font-weight: 500;
+  padding-bottom: 4rem;
 }
-
 .product-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    border: solid 2px black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.product {
+  color: #83869a;
+  /* border: solid 1px red; */
+  border-radius: 1.6rem;
+  margin: 4rem 1rem;
+  padding: 2rem 2rem;
+  max-width: 30rem;
+  position: relative;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+}
+.product__title:not(.product--featured > .product__title) {
+  color: black;
+  font-size: 1.9rem;
+  font-weight: 800;
+  padding: 2rem 0rem;
+}
+.product__subtitle {
+  font-weight: 400;
+  line-height: 2.8rem;
 }
 
 .product--featured {
-    background: var(--pink-orange-gradient);
-    color: white;
-    height: 15rem;
-    align-items: center;
+  background: linear-gradient(rgb(240, 42, 165),rgb(253, 104, 81));
+  color: white;
+  font-weight: 700;
+  font-size: 1.2rem;
+  padding: 2rem 3rem;
+  text-align: left;
 }
-
-.product {
-    display: grid;
-    gap: 1.5rem;
-    padding: 1rem;
-    border-radius: 1rem;
-    width: 350px;
-    border: 2px solid red;
-    /* margin-bottom: 1.5rem; */
+.product__icon-image{
+  position: absolute;
+  top:-3rem;
 }
-
-.product--featured .product__title {
-    font-size: 3.2rem;
+footer >.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 4rem;
+  max-width: 100rem;
+  margin: 0 auto;
+  /* height: 10rem; */
 }
-
-.product__title {
-    font-size: 2.4rem;
-}
-
-.product__subtitle {
-    font-size: 1.8rem;
-    color: var(--text-muted-color);
-    line-height: 2.8rem;
-}
-
-.product__link {
-    color: var(--main-btn-color);
-    text-decoration: none;
-    font-size: 1.8rem;
-    font-weight: 700;
-}
-
-.btn {
-    display: flex;
-    flex-wrap: wrap;
-    color: white;
-    height: 60px;
-    width: 200px;
-    font-size: 20px;
-    background-color: #12183F;
-    align-items: center;
-    justify-content: center;
-    border-radius: 100px;
-    text-decoration: none;
-    font-weight: 600;
-}
-
-.btn--banner {
-    background: var(--pink-orange-gradient);
-}
-
 footer {
-    background-color: var(--footer-bg-color);
-    color: white;
-    height: 15rem;
+  background: #13183f;
+  color: white;
+}
+
+@media screen and (min-width: 756px) {
+  .main-container {
+  }
+  .hero {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .hero__left {
+    flex-direction: column;
+    align-items: start;
+    width: 40rem;
+  }
+  .hero__right {
+    width: 50rem;
+    /* overflow: hidden; */
+  }
+  .hero__right img {
+    /* max-width: 90%; */
+    width: 100%;
+    /* object-fit: cover; */
+    object-position:
+  }
+  .btn--cta {
+  }
+  .hero__cta, .hero__sub-header{
+    text-align: left;
+  }
+  .product-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .product {
+    margin: 4rem 0rem;
+  }
+  .product--featured {
+    height: 25rem;
+  }
 }
